<resources>
    <string name="app_name">Cardio\nKeeper</string>
    <string name="action_graph">About</string>

    <!-- Navigation drawer strings -->
    <string name="graph">Graph</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="backup">Backup \u0026 Restore</string>

    <!-- MainActivity strings -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="select_">Select\u2026</string>
    <string name="biking">Biking</string>
    <string name="elliptical">Elliptical</string>
    <string name="exercise_bike">Exercise Bike</string>
    <string name="hiking">Hiking</string>
    <string name="jogging">Jogging</string>
    <string name="jump_rope">Jump Rope</string>
    <string name="rowing">Rowing</string>
    <string name="rowing_machine">Rowing Machine</string>
    <string name="running">Running</string>
    <string name="stair_master">Stair Master</string>
    <string name="treadmill">Treadmill</string>
    <string name="walking">Walking</string>
    <string name="swimming">Swimming</string>

    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="cal_burned">Calories</string>
    <string name="laps">Laps</string>
    <string name="dph">Speed</string>
    <string name="cals_per_time">Cals per Hr</string>
    <string name="cals_per_dist">Cals per Dist.</string>

    <string-array name="graph_data_type">
        <item>@string/select_</item>
        <item>@string/duration</item>
        <item>@string/distance</item>
        <item>@string/cal_burned</item>
        <item>@string/dph</item>
        <item>@string/cals_per_time</item>
        <item>@string/cals_per_dist</item>
    </string-array>

    <string name="all">All</string>
    <string name="week">Week</string>
    <string name="one_mo">1 Month</string>
    <string name="three_mo">3 Months</string>
    <string name="six_mo">6 Months</string>
    <string name="one_yr">1 Year</string>

    <string-array name="time_frame">
        <item>@string/week</item>
        <item>@string/one_mo</item>
        <item>@string/three_mo</item>
        <item>@string/six_mo</item>
        <item>@string/one_yr</item>
        <item>@string/all</item>
    </string-array>

    <string-array name="cardio_types">
        <item>@string/select_</item>
        <item>@string/biking</item>
        <item>@string/elliptical</item>
        <item>@string/exercise_bike</item>
        <item>@string/hiking</item>
        <item>@string/jogging</item>
        <item>@string/jump_rope</item>
        <item>@string/rowing</item>
        <item>@string/rowing_machine</item>
        <item>@string/running</item>
        <item>@string/stair_master</item>
        <item>@string/swimming</item>
        <item>@string/treadmill</item>
        <item>@string/walking</item>
    </string-array>

    <string name="cardio_icon_description">Cardio Icon</string>

    <string name="denied_permission_msg">
        Backup and Restore cannot be used with out enabling the proper permission.\n\nPlease click \"Allow\" to enable Backup and Restore
    </string>
    <string name="allow_permission_msg">Allow</string>

    <!-- Timer Activity strings -->
    <string name="start_btn">Start</string>
    <string name="pause_btn">Pause</string>
    <string name="lap_btn">Lap</string>
    <string name="resume_btn">Resume</string>
    <string name="end_record_btn">End and\nRecord</string>

    <!-- HelloGraph Strings -->

    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="months">Months</string>
    <string name="years">Years</string>
    <string name="no_graph_data">Nothing to show\nfor those selections</string>

    <string name="include_laps_text">Include Lap Data</string>
    <string name="run_query_button_text">Go</string>
    <string name="cancel_menu_button">Cancel</string>

    <!-- Button Dialog Frag Layout Strings -->
    <string name="cardio_label">Cardio: </string>
    <string name="date_label">Date: </string>
    <string name="time_label">Time: </string>
    <string name="time_input_hint">hh:mm:ss</string>
    <string name="distance_label">Distance: </string>
    <string name="calories_label">Calories: </string>
    <string name="lap_label">Laps: </string>
    <string name="ok_btn">OK</string>
    <string name="cancel_btn">Cancel</string>

    <!-- Shared Preferences Keys -->

    <string name="db_backup_key">db_backup_key</string>
    <string name="db_backup_location">db_backup_location</string>

    <!-- Strings related to Settings -->

    <string name="title_activity_settings">Settings</string>

    <!-- 1st setting -->

    <string name="pref_distance_title">Distance Units</string>
    <!-- key -->
    <string name="pref_distance">pref_distance</string>
    <string name="miles">Mile(s)</string>
    <string name="short_miles">Mi</string>
    <string name="kilos">Kilometer(s)</string>
    <string name="short_kilos">Km</string>

    <string-array name="pref_distance_type">
        <item>@string/miles</item>
        <item>@string/kilos</item>
    </string-array>

    <string-array name="pref_distance_values">
        <item>-1</item>
        <item>1</item>
    </string-array>

    <!-- 2nd setting -->

    <string name="pref_sync_title">Enable Auto Backup</string>
    <string name="pref_sync_summary">Allow app to automatically backup data to last backup location</string>
    <!-- key -->
    <string name="pref_sync">pref_sync</string>

    <!-- 3rd setting -->

    <string name="sync_date_pref_text">Last Sync</string>
    <string name="never">Never</string>
    <!-- key -->
    <string name="db_backup_date_time">db_backup_date_time</string>

    <!-- GeneralDialog strings -->
    <string name="sync_dialog_notice">You can change this at any time by going to Settings in the side menu\u2026</string>
    <string name="about_dialog_title">Q29 Creations</string>
    <string name="sync_dialog_title">Enable Auto Sync?</string>

    <string name="about_intro">Q29 Creations</string>
    <string name="copyright">Cardio Keeper\nCopyright 2017 Robert M Jones II\n\nLicensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0http://www.apache.org/licenses/LICENSE-2.0\n
\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.\n</string>
    <string name="other_software_clause">Third-Party Contributors</string>
    <string name="hello_charts">Hello Charts\n<a href="https://github.com/lecho/hellocharts-android/blob/master/LICENSE.txt">github.com/lecho/hellocharts-android</a></string>
    <string name="hello_charts_license">HelloCharts\nCopyright 2014 Leszek Wach\n\nLicensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n
\n\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0http://www.apache.org/licenses/LICENSE-2.0\n
\nUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.\n\nHelloCharts library uses code from InteractiveChart sample available
 on Android Developers page:\n\n\thttp://developer.android.com/training/gestures/scale.html\n</string>
    <string name="toasty">Toasty\n<a href="https://github.com/GrenderG/Toasty">github.com/GrenderG/Toasty</a></string>
    <string name="glide">Glide\n<a href="http://bumptech.github.io/glide/">bumptech.github.io/glide/</a></string>
    <string name="flaticon">The following icon creators at <a href="http://www.flaticon.com">Flaticon.com</a></string>
    <string name="author_freepik">Icons made by Freepik from <a href="http://www.flaticon.com">www.flaticon.com</a></string><!-- running, hiking, rowboat, jump rope, jogging, treadmill, bike, swimming -->
    <string name="author_scott_de_jonge">Icon made by Scott de Jonge from <a href="http://www.flaticon.com">www.flaticon.com</a></string>
    <string name="toasty_icon_description">Toasty Icon</string>
    <string name="glide_icon_description">Glide Icon</string>
    <string name="event_bus">EventBus by green<font fgcolor="#5fad35">robot</font>\n<a href="http://greenrobot.org/eventbus/">greenrobot.org</a></string>

    <string name="run_icon_description">Run Icon</string>
    <string name="hike_icon_description">Hike Icon</string>
    <string name="row_icon_description">Row Icon</string>
    <string name="jump_rope_icon_description">Jump Rope Icon</string>
    <string name="jog_icon_description">Jog Icon</string>
    <string name="treadmill_icon_description">Treadmill Icon</string>
    <string name="bike_icon_description">Hike Icon</string>
    <string name="swim_icon_description">Swim Icon</string>

    <!-- TimerActivity dialog strings -->
    <string name="dialog_save_exit_msg">Are you done recording your cardio session?</string>
    <string name="dialog_back_press_exit_running_msg">The timer is still running\u2026\nAny data recorded will be lost\nDo you still want to exit?</string>
    <string name="title_activity_opening">OpeningActivity</string>
    <string name="title_activity_hello_graph_v2">HelloGraphV2</string>

    <!-- TimerService -->
    <string name="ticker">Time Elapsed</string>

    <!-- Color codes -->
    <string name="bike_color">#ff0000</string>
    <string name="elliptical_color">#ff6680</string>
    <string name="exercise_bike_color">#cc2100</string>
    <string name="hiking_color">#008888</string>
    <string name="jogging_color">#ff00ff</string>
    <string name="jump_rope_color">#dd00a0</string>
    <string name="rowing_color">#ffa500</string>
    <string name="rowing_machine_color">#2aa900</string>
    <string name="running_color">#999999</string>
    <string name="stair_master_color">#666666</string>
    <string name="swimming_color">#00cc00</string>
    <string name="treadmill_color">#0088ff</string>
    <string name="walking_color">#0000ff</string>

    <!-- BackupRestoreDialog strings -->
    <string name="dialog_backup">Back up</string>
    <string name="dialog_restore">Restore</string>
    <string name="dialog_new_locale">Backup to\u2026</string>
    <string name="dialog_restore_from">Restore from\u2026</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Bottom Sheet -->

    <string name="filter_by">Filter by\u2026</string>
    <string name="sort_by">Sort by\u2026</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear</string>
    <string name="reset">Reset</string>

    <string-array name="sort_options">
        <item>Select\u2026</item>
        <item>Exercise: A-Z</item>
        <item>Exercise: Z-A</item>
        <item>Date: Ascending</item>
        <item>Date: Descending</item>
        <item>Distance: Ascending</item>
        <item>Distance: Descending</item>
        <item>Time: Ascending</item>
        <item>Time: Descending</item>
        <item>Calories: Ascending</item>
        <item>Calories: Descending</item>
    </string-array>

    <string name="title_activity_graphing">GraphingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
