<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/general_dialog_background"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_intro"
            android:padding="12dp"
            android:textSize="18sp"
            android:gravity="center"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:padding="12dp"
            android:textSize="12sp"
            android:typeface="monospace"
            android:background="@android:color/white"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textSize="18sp"
            android:text="@string/other_software_clause"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:typeface="monospace"
            android:textSize="12sp"
            android:text="@string/hello_charts_license"
            android:background="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/toasty_icon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/toasty_icon_description" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="18sp"
                android:text="@string/toasty"
                android:textColor="@android:color/white"
                android:linksClickable="true"
                android:autoLink="web"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textSize="14sp"
            android:text="@string/author_freepik"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:linksClickable="true"
            android:autoLink="web"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/run_cardio"
                android:contentDescription="@string/run_icon_description" />
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/hike_cardio"
                android:contentDescription="@string/hike_icon_description" />
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/row_cardio"
                android:contentDescription="@string/row_icon_description" />
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/jump_rope_cardio"
                android:contentDescription="@string/jump_rope_icon_description" />
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/jog_cardio"
                android:contentDescription="@string/jog_icon_description" />
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/treadmill_cardio"
                android:contentDescription="@string/treadmill_icon_description" />
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/bike_cardio"
                android:contentDescription="@string/bike_icon_description" />
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/swim_cardio"
                android:contentDescription="@string/swim_icon_description" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:text="@string/author_scott_de_jonge"
            android:drawableStart="@drawable/walk_cardio"
            android:linksClickable="true"
            android:autoLink="web"/>

    </LinearLayout>

</ScrollView>