<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_distance_type"
        android:entryValues="@array/pref_distance_values"
        android:key="pref_distance"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_distance_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_sync"
        android:summary="@string/pref_sync_summary"
        android:title="@string/pref_sync_title" />

    <ListPreference
        android:defaultValue="24"
        android:entries="@array/pref_sync_time_list"
        android:entryValues="@array/pref_sync_time_values"
        android:key="pref_sync_interval"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_sync_time_title"
        android:dependency="pref_sync"/>

</PreferenceScreen>
