<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="32dp"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backup_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:theme="@style/DialogButtons"
            android:text="@string/dialog_backup" />

        <Button
            android:id="@+id/restore_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dialog_restore"
            android:theme="@style/DialogButtons.Restore" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/backup_mini_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:visibility="gone">

        <Button
            android:id="@+id/backup_same_location"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:theme="@style/DialogButtons.Mini"/>

        <Button
            android:id="@+id/backup_new_location"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:theme="@style/DialogButtons.Mini"
            android:text="@string/dialog_new_locale"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/restore_mini_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:visibility="gone">

        <Button
            android:id="@+id/restore_last_location"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:theme="@style/DialogButtons.Restore.Mini"/>

        <Button
            android:id="@+id/restore_other_location"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:theme="@style/DialogButtons.Restore.Mini"
            android:text="@string/dialog_restore_from"/>

    </LinearLayout>

</LinearLayout>